--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
 name: MLflow Retraining CI
 
-# Pemicu: jalankan workflow saat ada push ke branch 'main'
 on:
   push:
     branches: [ main ]
@@ -14,21 +13,20 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Langkah 2: Set up Conda
+      # Langkah 2: Set up Conda (versi sederhana)
       - name: Set up Conda
         uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
           python-version: "3.11"
-          # Mengaktifkan lingkungan dasar Conda untuk langkah selanjutnya
-          activate-environment: base
 
-      # Langkah 3: Install MLflow
-      - name: Install MLflow
-        run: pip install mlflow
-
-      # Langkah 4: Run MLflow Project
-      # Menggunakan login shell (-l) agar conda terinisialisasi dengan benar
-      - name: Run MLflow Project
+      # Langkah 3: Install & Run dalam satu shell yang sama
+      - name: Install MLflow and Run Project
+        # Menggunakan login shell (-l) agar conda terinisialisasi
         shell: bash -l {0}
-        run: mlflow run MLProject/
+        run: |
+          # Pertama, install mlflow di lingkungan dasar
+          pip install mlflow
+          
+          # Kedua, jalankan project. MLflow sekarang bisa menemukan conda.
+          mlflow run MLProject/
