--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,39 +6,52 @@ on:
   workflow_dispatch:
 
 jobs:
-  retrain-model:
+  retrain-and-build-docker:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # memberikan izin untuk push
+      contents: write
+
     steps:
-      # Langkah 1: Checkout Repository
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Langkah 2: Set up Conda
       - name: Set up Conda
         uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
           python-version: "3.11"
 
-      # Langkah 3: Install & Run dalam satu shell yang sama
       - name: Install MLflow and Run Project
         shell: bash -l {0}
         run: |
           pip install mlflow
           mlflow run MLProject/
+      
+      # --- LANGKAH-LANGKAH BARU UNTUK ADVANCE ---
 
-      # Langkah 4: Commit dan Push Hasil Eksperimen 
+      # Langkah 4: Login ke Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # Langkah 5: Build dan Push Docker Image dengan MLflow
+      - name: Build and Push Docker Image
+        shell: bash -l {0}
+        run: |
+          # Ganti <DOCKERHUB_USERNAME> dan <REPO_NAME> dengan milik Anda
+          mlflow models build-docker \
+            --model-uri "./MLProject" \
+            --name "riolintang-0/sentiment-analysis-ci:latest" \
+            --enable-mlserver
+            
+      # --- AKHIR LANGKAH BARU ---
+
+      # Langkah 6: Commit dan Push Hasil Eksperimen
       - name: Commit and Push MLflow Artifacts
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          # Pesan commit yang akan dibuat
-          commit_message: "ci: [Automated] Add trained model artifacts [skip ci]"
-          
-          # Folder yang akan di-commit (folder output MLflow)
-          file_pattern: mlruns/
-          
-          # Nama dan email untuk commit bot
+          commit_message: "ci: [Automated] Add artifacts and build Docker image [skip ci]"
           commit_user_name: GitHub Actions Bot
           commit_user_email: actions@github.com
